# IDM_Bookkeeper

./: LICENSE  pyproject.toml  запуск программы.txt
bookkeeper/: __main__.py  bookkeeper_app.py  main.py  utils.py
bookkeeper/models/: budget.py
bookkeeper/repository/: memory_repository.py  sqlite_repository.py
bookkeeper/view/: budget.py  expenses.py  main_window.py  view.py
database/: bookkeeper.db  test_sqlrepo.db
repository/: sqlite_repository.py
tests/: test_bookkeeper_app.py
tests/test_repository/: test_sqlite_repository.py
