[tool.poetry]
name = "bookkeeper"
version = "0.1.0"
description = ""
authors = ["Dan1ss1m0 <ivanov.dm@phystech.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
pylint = "^3.1.0"
pony = "^0.7.17"
pyside6 = "^6.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
